# ozimut

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: case_baseline.py
docs/: IMAGERY_PROVIDERS.md  ONTOLOGY.md  RELEASE_NOTES.md  SPEC.md  STORAGE_AND_PERFORMANCE.md  UI.md
extension/: README.md  background.js  bridge.js  manifest.json  options.html  options.js  overlay.js  popup.html  popup.js  ui.css
frontend/: index.html  jsconfig.json  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: app.fixture.js  proof-canvas.spec.js  satellite-canvas.spec.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/components/: CaseSidebar.svelte  CaseSwitcher.svelte  ConfirmDialog.svelte  EntityDetails.svelte  FolderSelect.svelte  FolderSelect.test.js  Icon.svelte  Logo.svelte  Modal.svelte  Toasts.svelte  Toasts.test.js  UpdateModal.svelte  Wordmark.svelte
frontend/src/lib/: api.js  appUpdate.js  appUpdate.test.js  bookmarks.js  bookmarks.test.js  captureSize.js  captureSize.test.js  catalog.js  catalog.test.js  chain.js  chain.test.js  composer.js  composer.test.js  coords.js  coords.test.js  events.js  events.test.js  extBridge.js  extBridge.test.js  filing.js  filing.test.js  folderTree.js  folderTree.test.js  frameRotate.js  frameRotate.test.js  fullscreen.js  fullscreen.test.js  gmaps.js  gmaps.test.js  gridSearch.js  gridSearch.test.js  gridSelect.js  gridSelect.test.js  history.js  history.test.js  inspect.js  inspect.test.js  maplinks.js  maplinks.test.js  markdown.js  (+43 more)
frontend/src/tools/: Coordinates.svelte  Files.svelte  Inspector.svelte  MediaLibrary.svelte  MediaLibrary.test.js  Notebook.svelte  Notebook.test.js  PostComposer.svelte  PostComposer.test.js  ProofComposer.svelte  ProofComposer.test.js  RefViewer.svelte  ReverseSearch.svelte  Satellite.svelte  Settings.svelte
frontend/src/tools/inspect/: AdjustSliders.svelte  CollageCanvas.svelte  CollageMenu.svelte  CollagePreview.svelte  CropBox.svelte  CropControls.svelte  FrameMenu.svelte  OrientationControls.svelte  PieceCropModal.svelte  SaveGallery.svelte  SaveMenu.svelte  SelectionMenu.svelte  VideoPlayer.svelte  VideoPlayer.test.js
frontend/src/tools/proof/: NewProofDialog.svelte  ProofCanvas.svelte  ProofLayersPanel.svelte  ProofToolbar.svelte  ProofToolbar.test.js  canvasLifecycle.js
frontend/src/tools/satellite/: CaptureOptions.svelte  GridSearchPanel.svelte  MapToolCluster.svelte  SentinelPicker.svelte  SentinelPicker.test.js
packaging/: azimut.spec
scripts/: relaunch.py  smoke_binary.py
src/azimut/: __init__.py  cli.py  config.py  repository.py  server.py  sqlite_backend.py  workspace.py
src/azimut/api/: cases.py  drafts.py  events.py  ingest.py  inspect.py  limits.py  media.py  proofs.py  satellite.py  settings.py
src/azimut/engine/: coords.py  ffmpeg.py  geo.py  google_tiles.py  inspect.py  links.py  mapsites.py  media.py  satellite.py  scrapers.py  sentinel.py  stitch.py  thumbnails.py  tilecache.py  tiles.py  updates.py
src/ozimut/: __init__.py  cli.py  config.py  server.py  workspace.py
src/ozimut/api/: cases.py  inspect.py  media.py  satellite.py
src/ozimut/engine/: inspect.py  media.py  satellite.py  tiles.py
tests/: bigcase.py  conftest.py  graph_read.py  legacy_case.py  test_bigcase.py  test_binary_smoke.py  test_cases_api.py  test_config.py  test_coords.py  test_drafts_api.py  test_events_api.py  test_ffmpeg.py  test_focus.py  test_geo_api.py  test_geo_formats.py  test_ingest_api.py  test_inspect_api.py  test_links_api.py  test_mapsites.py  test_media_api.py  test_migrations.py  test_proofs_api.py  test_relaunch.py  test_release_gate.py  test_repository.py  test_satellite_api.py  test_scrapers.py  test_sentinel.py  test_settings_api.py  test_settings_backup.py  test_sqlite_backend.py  test_stitch.py  test_thumbnails.py  test_tiles.py  test_updates.py
