[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azimut"
version = "0.1.1"
description = "The OSINT investigator's workbench — local-first media, geolocation proofs and case management."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "OsintMeThat" }]
keywords = ["osint", "geoint", "geolocation", "investigation", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Upper bounds stop at the next major we haven't tested against: a range is a
# claim about what works, and we can't make that claim for code that doesn't
# exist yet. Raise a bound deliberately, after the suite passes against it.
#
# yt-dlp and gallery-dl are the deliberate exception — see below.
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3",
    "httpx>=0.27,<1.0",
    "pillow>=10.3,<13",
    "opencv-python-headless>=4.9,<5",
    "numpy>=1.26,<3",
    "requests>=2.31,<3",
    "python-multipart>=0.0.9,<1.0",
    # Unbounded ON PURPOSE. These two race against sites that change without
    # notice, so an old version is a broken version — the usual "pin for
    # reproducibility" logic inverts here. Azimut can also fetch newer copies
    # at runtime into the workspace, which shadow whatever is installed or
    # frozen into the binary (engine/scrapers.py).
    "yt-dlp>=2024.4.9",
    "gallery-dl>=1.27",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.23,<2", "httpx>=0.27,<1.0"]

[project.scripts]
azimut = "azimut.cli:main"

[project.urls]
Homepage = "https://github.com/OsintMeThat/azimut"

# The frontend builds into src/azimut/static (git-ignored). Force it into BOTH
# the sdist and the wheel — `python -m build` builds the wheel from the sdist,
# so if the sdist omits static the shipped wheel has no UI. Run `npm run build`
# before building the package.
[tool.hatch.build]
artifacts = ["src/azimut/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/azimut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
